traces/bug_221.txt
examples++-load/lgbmo.cpp:191: error: DEAD_STORE
  The value written to &tol (type double) is never used.
Showing all 1 steps of the trace


examples++-load/lgbmo.cpp:191:7: Write of unused value
189.         */
190.   
191.         R tol=arg(0,stack,1E-6); // not used ....
             ^
192.         int nbrestart=arg(1,stack,5L);
193.         int nbext1=5; // bof bof 
